# pyth-crosschain-legacy

pythnet/pythnet_sdk/: Cargo.toml
pythnet/pythnet_sdk/src/: wormhole.rs
pythnet/pythnet_sdk_legacy/: Cargo.toml
pythnet/pythnet_sdk_legacy/src/: wormhole.rs
target_chains/solana/: Cargo.toml
target_chains/solana/pyth_solana_receiver_sdk/: Cargo.toml  README.md
target_chains/solana/pyth_solana_receiver_sdk_legacy/: Cargo.toml
